# wiiu-tests

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
content/: CMakeLists.txt
content/shaders/: CMakeLists.txt  pos_colour.vsh  pos_colour_mvp.frag.glsl  pos_colour_mvp.vert.glsl
src/: CMakeLists.txt
src/coreinit/: CMakeLists.txt
src/coreinit/filesystem/: filesystem_read.c
src/gx2/: CMakeLists.txt
src/gx2/draw/: draw_primitivemodes.c  triangle.c
